--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "sitemap": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine"
@@ -12,6 +13,7 @@
   "dependencies": {
     "@prismicio/client": "^5.1.0",
     "next": "12.2.5",
+    "next-sitemap": "^3.1.21",
     "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
